# agents-courses

./: .gitignore  README.md  pyproject.toml
agents/: README.md  assis_proxy_agents.py  simple_agent.py  simple_code_executor.py
agents/autogen_tools/: simple_tool.py  travel_agent.py  travel_planner_tools.py
agents/coding/: fetch_stock_data.py  plot_stocks.py
agents/conversation_patterns/: group_chat_seq.py  group_chat_simple.py  nested_chat_simple.py  seq_chat_agents.py  travel_agent.py
agents/input_modes/: always_mode.py  never_mode.py  terminate_mode.py
agents/use_cases/: custormer_support_workflow.py  financial_data.csv  financial_report.py  research_agent.py
chromadb_exampels/: README.md  chromadb_emb.py  chromadb_example.py  chromadb_openapi.py  chromadb_persistence.py  raw_emb.py
code_execution/: get_france_capital.py
lancgchain_examples/: README.md  langchain_coursera_rag.py  langchain_example.py
langgraph_agents/: README.md
langgraph_agents/Persistence/: main.py
langgraph_agents/RAG/: ingestion.py  main.py
langgraph_agents/ReAct/: main.py  nodes.py  react.py
langgraph_agents/async_graph/: async.py
langgraph_agents/langgraph_studio/: langgraph.json  pyproject.toml
langgraph_agents/reflection-agents/: chains.py  main.py
langgraph_agents/reflexion-agent/: chains.py  main.py  schema.py  tool_executer.py
llamaindex_examples/: README.md  agents.py  first_example.py
llamaindex_examples/documentation-helper/: ingestion.py  (+4 more)
llm/: vector_db_llm.py  vector_db_llm_langchain.py
pinecone_examples/: pinecone_intro.py  pinecone_langchain.py
(+26 files in other folders)
